examples/type_system/failing/191_contextual_effect_missing_module_call_e400.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E400: module-qualified call requires IO, but caller is declared with Time only.

import TypeSystem.EffectsChain

fn run_step(x: Int) -> Int with Time {
    TypeSystem.EffectsChain.call_io_step(x)
}

fn main() with Time {
    run_step(1)
    None
}
